testsuite/tests/explicit-dicts/should_fail/Incoherence5.stderr

Incoherence5.hs:18:8: error:
    • Explicit dictionary application not allowed: incoherence detected
    • In the expression: f notDict True
      In an equation for ‘test’:
          test
            = f notDict True
            where
                notDict = SomeClass.Dict not
